# Blot-score

./: CMakeLists.txt  CMakeUserPresets.json  README.md
android/: AndroidManifest.xml
app/: CMakeLists.txt  main.cpp  main.qml  support.txt
app/qml_resources/: ScoreInput.qml  ScoreName.qml
